# large_scale_traj_optimizer

example/: CMakeLists.txt
example/src/: check.py  example.cpp
